--- a/templates/index.jade
+++ b/templates/index.jade
@@ -6,12 +6,13 @@ html
     head
         meta(charset="utf-8")
         title= self.api.name || '灵析 API'
+        //- 这里因为项目引入过，就不再重复
         link(rel="stylesheet", href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css")
         style!= self.css
     body.preload
         a.text-muted.back-to-top(href='#top')
             i.fa.fa-toggle-up
-            | &nbsp;回到顶部
+            | &nbsp;
         div(class=self.fullWidth ? 'container-fluid' : 'container')
             .row
                 block nav
