--- a/templates/index.jade
+++ b/templates/index.jade
@@ -7,7 +7,7 @@ html
         meta(charset="utf-8")
         title= self.api.name || '灵析 API'
         //- 这里因为项目引入过，就不再重复
-        link(rel="stylesheet", href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css")
+        //- link(rel="stylesheet", href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css")
         style!= self.css
     body.preload
         a.text-muted.back-to-top(href='#top')
