--- a/templates/index.jade
+++ b/templates/index.jade
@@ -36,7 +36,7 @@ html
           || document.getElementsByTagName('body')[0]).appendChild(ds);
           })();
 
-        // for preview
+        //- for preview
         if self.livePreview
             script(src="/socket.io/socket.io.js")
             script.
