--- a/templates/mixins.jade
+++ b/templates/mixins.jade
@@ -49,18 +49,18 @@ mixin Nav()
                               a(href=resource.elementLink)!= resource.name || 'Resource'
                               ul: each action in resource.actions || []
                                   li: a(href=action.elementLink)
-                                    +Badge(action.method)
+                                    //- +Badge(action.method)
                                     != action.name || action.method + ' ' + (action.attributes && action.attributes.uriTemplate || resource.uriTemplate)
                           else
                               - var action = resource.actions[0]
                               a(href=action.elementLink)
-                                  +Badge(action.method)
+                                  //- +Badge(action.method)
                                   != action.name || resource.name || action.method + ' ' + (action.attributes && action.attributes.uriTemplate || resource.uriTemplate)
         //- Link to the API hostname, e.g. api.yourcompany.com
-        //each meta in self.api.metadata || {}
-          //  if meta.name == 'HOST'
-            //    p(style="text-align: center; word-wrap: break-word;")
-              //      a(href=meta.value)= meta.value
+        //- each meta in self.api.metadata || {}
+        //-     if meta.name == 'HOST'
+        //-         p(style="text-align: center; word-wrap: break-word;")
+        //-             a(href=meta.value)= meta.value
 
 mixin Parameters(params)
     //- Draw a definition list of parameter names, types, defaults,
@@ -150,7 +150,7 @@ mixin Content()
     //- Page header and API description
     header
         h1#top!= self.api.name || 'API Documentation'
-        a(class='fa fa-edit', href='GITHUB_FILE_LINK', target='_blank')
+        //- a(class='fa fa-edit', href='GITHUB_FILE_LINK', target='_blank')
 
     if self.api.descriptionHtml
         != self.api.descriptionHtml
@@ -185,7 +185,7 @@ mixin Content()
                             if action.description
                                 != self.markdown(action.description)
 
-                            h4 Example URI
+                            h4 URL
                             .definition
                                 span.method(class=action.methodLower)= action.method
                                 | &nbsp;
