--- a/styles/rewrite.less
+++ b/styles/rewrite.less
@@ -23,7 +23,7 @@ code {
     margin: 0 2px;
     border-radius: 2px;
     white-space: wrap;
-    border: none !important;;
+    border: none !important;
 }
 
 // nav
