MOD 文档表格样式

--- a/styles/rewrite.less
+++ b/styles/rewrite.less
@@ -1,100 +1,37 @@
 @import "_variable.less";
+@import "_global.less";
 @import "_duoshuo.less";
 
-.container {
-  width: 1000px;
+table {
+  width: 100%;
 }
 
-.container .row .content {
-  padding-left: 40px;
-  border-left: 1px solid @greyLighter;
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-}
-
-// 去掉 pre 边框
-pre {
-  border: none !important;
-}
-
-code {
-    color: #e96900;
-    padding: 3px 5px;
-    margin: 0 2px;
-    border-radius: 2px;
-    white-space: wrap;
-    border: none !important;
-}
-
-// nav
-nav .resource-group {
-  margin-bottom: 0;
-  border-bottom: 1px solid @greyLighter;
-}
-
-nav .resource-group .collapse-content {
-  // padding-left: 10px;
-}
-
-nav>div>div>ul>li:first-child>a {
-  border-top: 1px solid transparent;
-}
-
-nav .resource-group .heading a {
-  padding-left: 0;
-}
-
-nav .resource-group .heading a:hover,
-nav ul a:hover {
-  text-decoration: none !important;
-}
-
-nav ul a {
-  padding: 5px 12px;
-  border-left-width: 0;
-  &:hover {
-    color: white !important;
-    background: @primary !important;
-    border-left-width: 0 !important;
+#筹款支付表单 {
+  table {
+    thead {
+      tr {
+        th {
+          &:nth-child(1) {
+            width: 8%
+          }
+          &:nth-child(2) {
+            width: 12%
+          }
+        }
+      }
+    }
   }
 }
 
-nav ul>li.active a {
-  color: white !important;
-  background: @primary !important;
-  border-left-width: 0 !important;
-}
-
-.action {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-nav ul>li:last-child {
-  margin-bottom: 0;
-}
-
-.action h4.action-heading .method.get {
-  color: white;
-}
-
-// rewrite scrollbar
-nav,
-pre {
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    background-color: @greyLighter;
-  }
-
-  &::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: white;
-    border: 1px solid @greyLighter;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: @greyLighter;
+.action-heading + table {
+  thead {
+    tr {
+      th {
+        width: 10%;
+        &:last-child {
+          width: 80%
+        }
+      }
+    }
   }
 }
