MOD 添加联系人创建，更新文档

--- a/styles/_global.less
+++ b/styles/_global.less
@@ -71,7 +71,9 @@ nav ul>li:last-child {
   margin-bottom: 0;
 }
 
-.action h4.action-heading .method.get {
+.action h4.action-heading .method.get,
+.action h4.action-heading .method.post,
+.action h4.action-heading .method.put {
   color: white;
 }
 
